--- a/Kubernetes-Manifests-file/Database/deployment.yaml
+++ b/Kubernetes-Manifests-file/Database/deployment.yaml
@@ -24,6 +24,8 @@ spec:
             - "0.1"
             - "--bind_ip"
             - "0.0.0.0"
+      imagePullSecrets:
+      - name: ecr-registry-secret
         ports:
         - containerPort: 27017
         env: 
