--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     role: frontend
     env: demo
-spec: 
+spec:
   replicas: 1
   strategy:
     type: RollingUpdate
@@ -14,13 +14,13 @@ spec:
       maxSurge: 1
       maxUnavailable: 25%
   selector:
-    matchLabels: 
+    matchLabels:
       role: frontend
   template:
     metadata:
       labels:
         role: frontend
-    spec: 
+    spec:
       imagePullSecrets:
       - name: ecr-registry-secret
       containers:
@@ -29,6 +29,7 @@ spec:
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
-            value: "http://amanpathakdevops.study/api/tasks"
+            # Use the internal Kubernetes service name for the backend
+            value: "http://backend-service:8000/api/tasks"
         ports:
         - containerPort: 3000
